--- a/modules/ext.moodBar/ext.moodBar.core.css
+++ b/modules/ext.moodBar/ext.moodBar.core.css
@@ -152,12 +152,32 @@
 	padding: 1em;
 }
 
+.mw-moodBar-overlayWhat a {
+	color: #0645ad;
+}
+
+.mw-moodBar-overlayWhatTrigger {
+	display: inline-block;
+}
+
+.moodbar-what-collapsed {
+	/* @embed */
+	background: transparent url('images/whatisthis-collapsed.png') center center no-repeat;
+	height: 8px;
+	width: 8px;
+}
+
+.moodbar-what-expanded {
+	/* @embed */
+	background: transparent url('images/whatisthis-expanded.png') center center no-repeat;
+	height: 8px;
+	width: 8px;	
+}
+
 .red-bold {
 	font-weight: bold;
 	color: #CC0000;
 }
-
-
 
 /**
  * Types
